catalog-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: ghcr.io/kstacks-org/catalog-service:master-89ae2aa
          ports:
            - containerPort: 41619
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /catalog/actuator/health/liveness
              port: 41619
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /catalog/actuator/health/readiness
              port: 41619
            initialDelaySeconds: 10
            periodSeconds: 5
